--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <nav>
   <ul class="nav nav-pills">
     <li *ngFor="let action of actions">
-      <button routerLink="{{action.route}}" class="btn btn-outline-success ms-1" >
+      <button
+        (click)="setCurrentAction(action)"
+        routerLink="{{action.route}}" 
+        [class]="action==currentAction?
+        'btn btn-success ms-1':
+        'btn btn-outline-success ms-1'">
         {{ action.title }}
         <i class="bi bi-{{action.icon}}"></i>
       </button>
